added me to link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Contact Me</a>
                     </li>
                 </ul>
             </div>
