--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <h3>"The heart and soul of the company is creativity and innovation." B, Iger</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
+                        <h3>GOING LIVE</h3>
                             <li>
                                 <a href="https://twitter.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
