added simple glyphicon to project details and added wells to wuote above project imagery.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
 		
 		<!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" type="text/css" href="http://jschr.github.io/bootstrap-modal/css/bootstrap-modal-bs3patch.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 		<link rel="stylesheet" type="text/css" href="portfolio.css">
 
 		<!-- Custom Font-->
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+        
 
 		 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!--[if lt IE 9]>
@@ -108,14 +110,28 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">A special thanks to instructor <a target="_blank" href=""></a> for providing the inspiration to achieve fluid understanding and appreication for art.</p>
+                    <h2 class="section-heading">Mobile Device Deployment:<br>Simplify Navigation</h2>
+                    <p class="lead">A special thanks to instructor <a href="www.linkedin.com/in/christopherchapmans">Chris Chapman</a> <a target="_blank" href=""></a> for providing the inspiration to push further with deployment enviorments and user interactions thus enhancing overall user experience of web applications.</p><button class="demo btn btn-primary btn-lg" data-toggle="modal" href="#full-width">Details</button>
+                </div>
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">Time Warner On-Demand UI Re-Design</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>I choose to re-design one user interface from Time Warner Cable On-demand</p>
+                    <p>My wife and I were looking for a favorite show of ours and I noticed that the User Interface information architecture was lacking visual flow. Content seem thrown into a grid and forced me to figure out what I was looking for before I was engaged with actual content to be viewed. Respectively, I've compelted a Wireframe for the new User Interface which supports proven design trends and major media call to actions.</p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  "The user doesn't want to search for content; The user wants to see content!"</div>
+                    <img class="img-center img-zoom" src="http://i59.tinypic.com/24g930y.png">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
+                    <img class="img-responsive" src="http://i59.tinypic.com/2cna1j.png" alt="">
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
 
@@ -130,8 +146,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media & Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
+                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
+                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to action with visiual affordances for developemnt team.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
@@ -178,7 +194,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media & Design:<br>Wireframe -> Comp</h2>
+                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
                     <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -224,7 +240,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media & Design:<br>Wireframe -> Comp</h2>
+                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
                     <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -269,7 +285,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media & Design:<br>Wireframe -> Comp</h2>
+                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
                     <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -314,7 +330,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media & Design:<br>Wireframe -> Comp</h2>
+                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
                     <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -429,5 +445,16 @@
 		});
 
     </script>-->
+    <script>
+
+
+        $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
+        
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+
+
+    </script>
 </body>
 </html>				
