--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="#">Contact Me</a>
+                        <a href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -380,7 +380,7 @@
 
     <div class="banner">
 
-        <div class="container">
+        <div id="contact" class="container">
 
             <div class="row">
                 <div class="col-lg-6">
