--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
                         <h3>"The heart and soul of the company is creativity and innovation." B, Iger</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                        <h3>GOING LIVE</h3>
                             <li>
                                 <a href="https://twitter.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
@@ -366,10 +365,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <p class="lead">I'm using 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt="">
                 </div>
             </div>
 
