added image id and edited css with width for image

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <p class="lead">I'm using 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt="">
+                    <img  id="fontawesome"class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt="">
                 </div>
             </div>
 
