updated css and links in html

--- a/index.html
+++ b/index.html
@@ -367,11 +367,9 @@
                     <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
                     <p class="lead">I'm using 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
 
-                <br>
-                <h2>Font Awesome gives you scalable vector icons that can instantly be customized — size, color, drop shadow, and anything that can be done with the power of CSS.</h2>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img  id="fontawesome"class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt="">
+                    <a href="https://github.com/FortAwesome/Font-Awesome/" ><img  id="fontawesome" class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt=""></a>
                 </div>
             </div>
 
