--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Device Deployment:<br>Simplify Navigation</h2>
-                    <p class="lead">A special thanks to instructor <a href="www.linkedin.com/in/christopherchapmans">Chris Chapman</a> <a target="_blank" href=""></a> for providing the inspiration to push further with deployment enviorments and user interactions thus enhancing overall user experience of web applications.</p><button class="demo btn btn-primary btn-lg" data-toggle="modal" href="#full-width">Details</button>
+                    <h4 class="section-heading">Mobile Device Deployment:<br>Simplify Navigation</h4>
+                    <h2>Timewarner OnDemand</h2>
+                    <p class="lead">Proposed Re-designed Timewarner OnDemand user interface. My goal with this project was to enhance the uers interactions with less searching and more watching per analytical data. Project was approved and passed off to development team. </p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
@@ -119,15 +120,9 @@
                   </div>
                   <div class="modal-body">
                     <p>I choose to re-design one user interface from Time Warner Cable On-demand</p>
-<<<<<<< HEAD
                     <p>My wife and I were looking for a favorite show of ours and I noticed that the User Interface information architecture was lacking visual flow. Content seem thrown into a grid and forced me to figure out what I was looking for before I was engaged with actual content to be viewed. Respectively, I've compelted a Wireframe for the new User Interface which supports proven design trends and major media call to actions.</p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  "The user doesn't want to search for content; The user wants to see content!"</div>
                     <img class="img-center img-zoom" src="http://i59.tinypic.com/24g930y.png">
-=======
-                    <p>Upon my wife and I looking for a favorite show of ours I noticed that the User Interface infrormation architecture flow was being hindered. Content seem thrown into a grid and forced me to fig out what i was looking for before I was engaged with actual content to be viewed. Respectively, I've compelted a Wire Frame of a new User Interface which supports proven design trends and major media call to actions.</p>
-                    <h3>"The user doesn't want to search for content; The user wants to see content!"</h3>
-                    <img class="text-center" src="http://i62.tinypic.com/33kdsie.png">
->>>>>>> simpleNavigation
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
@@ -151,8 +146,9 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to action with visiual affordances for developemnt team.</p>
+                    <h4 class="section-heading">Mobile Media &amp; Design:<br>Wireframe to Design Composites.</h4>
+                    <h2>Soair Airlines</h2>
+                    <p class="lead">Low Fidelity wireframes  &amp; Design Compositions to build and intergrate phase with prototype mobile application deployment.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
@@ -176,7 +172,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">A special thanks to instructor <a target="_blank" href=""></a> for providing the inspiration to achieve fluid understanding and appreication for art.</p>
+                    <p class="lead">Here I designed in with Cs6 master suite tools and tricks to create a radiant apple logo with half tones. NO SHADING, just black and white.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
@@ -189,186 +185,21 @@
     <!-- /section-a -->
 
 
+   	<!-- Section B -->
 
-    <!-- section b -->
-        <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- / section-b -->
-
-    <!-- section a-->
-    <div class="content-section-a">
-
-        <div  id="projects" class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">A special thanks to instructor <a target="_blank" href=""></a> for providing the inspiration to achieve fluid understanding and appreication for art.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-    </div>
-    <!-- /section-a -->
-
-
-    <!-- section b -->
-        <div class="content-section-b">
+    <div class="content-section-b">
 
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- / section-b -->
-
-    <!-- section a-->
-    <div class="content-section-a">
-
-        <div  id="projects" class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">A special thanks to instructor <a target="_blank" href=""></a> for providing the inspiration to achieve fluid understanding and appreication for art.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-    </div>
-    <!-- /section-a -->
-
-     <!-- section b -->
-        <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- / section-b -->
-
-    <!-- section a-->
-    <div class="content-section-a">
-
-        <div  id="projects" class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">A special thanks to instructor <a target="_blank" href=""></a> for providing the inspiration to achieve fluid understanding and appreication for art.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-    </div>
-    <!-- /section-a -->
-
-     <!-- section b -->
-        <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Mobile Media &amp; Design:<br>Wireframe -> Comp</h2>
-                    <p class="lead">High fidelity wireframes  to design comp post moodboard phase. I enjoyed reading the project breif and designing for specific call to actoin with visiual affordances for developemnt team.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="http://i57.tinypic.com/2ikcv4k.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- / section-b -->
-
-
-
-
-
-
-   	<!-- Section A -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
                     <p class="lead">I'm using 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
 
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="https://github.com/FortAwesome/Font-Awesome/" ><img  id="fontawesome" class="img-responsive" src="https://pbs.twimg.com/profile_images/1877229664/fort-awesome-logo-solid.png" alt=""></a>
                 </div>
             </div>
