--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="http://i59.tinypic.com/2cna1j.png" alt="">
+                    <button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>
                 </div>
             </div>
         </div>
@@ -205,9 +206,49 @@
             </div>
 
         </div>
-        <!-- /.container -->
+        <!-- /.container b end -->
     </div>
-    <!-- /Section A -->
+    <!-- container A START-->
+     <div class="content-section-a">
+
+        <div  id="projects" class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Web Design Project:<br>Re-Design a local website.</h4>
+                    <h2>SSR Motorsports</h2>
+                    <p class="lead">Proposed Re-designed SSR Motorsports user interface. My goal with this project was to enhance the uers interactions with less searching and feature information about SSR's motorscross pressence.</p>
+                </div>
+                 <div id="full-width1" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">SSR Motorsports UI Re-Design</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>I choose to re-design from scratch SSR Motorpsorts main website. This motorcross motorsports manufuacturer has has a wysiwyg editor from godaddy and expressed the need for an updated design. As you can see with my re-design I've succesffuly updated the main interface of the companies web application. I used a Feature and browse design pattern for this prototype with proper prsentations of the motocross manufactures product line.</p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  "The user doesn't want to search for content; The user wants to see content!"</div>
+                    <img class="img-center img-zoom" src="http://i61.tinypic.com/2w6igbb.jpg">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="http://i61.tinypic.com/2w6igbb.jpg" alt="">
+                    <button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>
+                </div>
+            </div>
+        </div>
+        <!-- /.container END-->
+
+    </div>
+    <!-- /.content-section-a  END-->
+
+
+
+    <!-- /Section A  start-->
 
     <div class="banner">
 
