--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Web Design Project:<br>Re-Design a local website.</h4>
                     <h2>SSR Motorsports</h2>
-                    <p class="lead">Proposed Re-designed SSR Motorsports user interface. My goal with this project was to enhance the uers interactions with less searching and feature information about SSR's motorscross pressence.</p>
+                    <p class="lead">Proposed Re-designed SSR Motorsports user interface. My goal with this project was to enhance the uers interactions with less searching and feature information about SSR's motorscross presence.</p>
                 </div>
-                 <div id="full-width1" class="modal container fade" tabindex="-1" style="display: none;">
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title">SSR Motorsports UI Re-Design</h4>
