--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                     <p>I choose to re-design one user interface from Time Warner Cable On-demand</p>
                     <p>My wife and I were looking for a favorite show of ours and I noticed that the User Interface information architecture was lacking visual flow. Content seem thrown into a grid and forced me to figure out what I was looking for before I was engaged with actual content to be viewed. Respectively, I've compelted a Wireframe for the new User Interface which supports proven design trends and major media call to actions.</p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  "The user doesn't want to search for content; The user wants to see content!"</div>
-                    <img class="img-center img-zoom" src="http://i59.tinypic.com/24g930y.png">
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="http://i59.tinypic.com/24g930y.png">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i59.tinypic.com/2cna1j.png" alt="">
+                    <img style="position: relative; top: 45px;"class="img-responsive" src="http://i59.tinypic.com/2cna1j.png" alt="">
                     <button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                     <h2>SSR Motorsports</h2>
                     <p class="lead">Proposed Re-designed SSR Motorsports user interface. My goal with this project was to enhance the uers interactions with less searching and feature information about SSR's motorscross presence.</p>
                 </div>
-                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                 <div id="responsive" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title">SSR Motorsports UI Re-Design</h4>
@@ -229,15 +229,17 @@
                   <div class="modal-body">
                     <p>I choose to re-design from scratch SSR Motorpsorts main website. This motorcross motorsports manufuacturer has has a wysiwyg editor from godaddy and expressed the need for an updated design. As you can see with my re-design I've succesffuly updated the main interface of the companies web application. I used a Feature and browse design pattern for this prototype with proper prsentations of the motocross manufactures product line.</p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  "The user doesn't want to search for content; The user wants to see content!"</div>
-                    <img class="img-center img-zoom" src="http://i61.tinypic.com/2w6igbb.jpg">
+                    <img class=" img-zoom" style=" position: relative; left: 185px;" src="http://i61.tinypic.com/jpfwg7.jpg">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i61.tinypic.com/2w6igbb.jpg" alt="">
-                    <button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>
+                    <img style="position: relative; top: 55px;" class="img-responsive" src="http://i61.tinypic.com/2w6igbb.jpg" alt="">
+                    <button style="position: relative; top: 75px;"type="button" data-toggle="modal" href="#responsive" class="btn btn-default">Details</button>
+                    <button style="position: relative; top: 75px; left 35px; " type="button"  class="btn btn-default"><a href="http://google.com">Repo</button>
+                    <button style="position: relative; top: 75px; left 70px; " type="button"  class="btn btn-default"><a href="http://meisterwebzr.github.io/WDP/index.html">Live</button>
                 </div>
             </div>
         </div>
