updated g8 hosting project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">MDD | Live to the World!</a>
+                <a class="navbar-brand" href="#">La Mirada | Web Designer &amp; Developer!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -89,6 +89,8 @@
                                 <a href="http://linkedin.com/in/oburroughs/" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                         </ul>
+                        <div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,6 +102,43 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+    <!-- section b-->
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Cloud, Shared, VPN, Domain &amp; SSL Certificates</h4>
+                    <img src="http://www.g8hosting.com/templates/default/img/whmcslogo.png">
+                    <div class="clearfix"></div><br />
+                    <p class="lead">This portal was created for my clients to have access to domain services all in one place. Enjoy easy access to your business website and manage the hosting enviornment with ease. </p>
+
+                    <form action="http://www.g8hosting.com/domainchecker.php" method="post">
+                    <input type="hidden" name="direct" value="true" />
+                    Domain: <input type="text" name="domain" size="20" /> <select name="ext">
+                    <option>.com</option>
+                    <option>.net</option>
+                    <option>.org</option>
+                    <option>.biz</option>
+                    </select>
+                    <input type="submit" value="Go" />
+                    </form><br />
+                    <a  href="http://www.g8hosting.com/register.php">Click here to register with us</a>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <a href="http://www.g8hosting.com"><img src="http://s23.postimg.org/wb8vh9a2z/Screen_Shot_2015_02_17_at_11_10_08_AM.png"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
 
     <div class="content-section-a">
 
@@ -139,6 +178,7 @@
     </div>
     <!-- /.content-section-a -->
 
+    <!-- section b-->
     <div class="content-section-b">
 
         <div class="container">
