--- a/index.html
+++ b/index.html
@@ -117,14 +117,15 @@
                     <p class="lead">This portal was created for my clients to have access to domain services all in one place. Enjoy easy access to your business website and manage the hosting enviornment with ease. </p>
 
                     <form action="http://www.g8hosting.com/domainchecker.php" method="post">
-                    <input type="hidden" name="direct" value="true" />
-                    Domain: <input type="text" name="domain" size="20" /> <select name="ext">
+                    <input type="hidden" name="direct" value="true" />Domain Search:<br />
+                    <input type="text" name="domain" size="20" value="" /> <select name="ext">
                     <option>.com</option>
                     <option>.net</option>
                     <option>.org</option>
                     <option>.biz</option>
                     </select>
-                    <input type="submit" value="Go" />
+                    <button type="submit" value="">Go</button>
+            
                     </form><br />
                     <a  href="http://www.g8hosting.com/register.php">Click here to register with us</a>
                 </div>
