--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">La Mirada | Web Designer &amp; Developer!</a>
+                <a class="navbar-brand" href="#">Your Web Designer</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img style="position: relative; top: 45px;"class="img-responsive" src="http://i59.tinypic.com/2cna1j.png" alt="">
-                    <button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>
+                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
         </div>
