added new project DigiXStream US to the list.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 
 
-		<title>Otto Burroughs | Portfolio</title>
+		<title>La Mirada Web Designer &amp; Developer | Portfolio</title>
 
 		<meta name="description" content="ePortfolio">
 		<meta name="author" content="Otto Burroughs">
@@ -102,6 +102,41 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  id="projects" class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">E-commerce Web Design<br>Authorized Distributor Website</h4>
+                    <h2>DigixStream US</h2>
+                    <p class="lead">I was contracted by T.W.P. LLC to design competitive website for handling wholesale &amp; retail orders for it's east coast distribution. I decided to capture the audience with a vivid motion picture feature style website. The e-commerce design is simple and to the point, allowing for successful transcations among TWP's wholesale or retail transactions.</p>
+                </div>
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">DigiStream US web design</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p></p>
+                    <p></p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></div>
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="#">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img style="position: relative; top: 45px;"class="img-responsive" src="http://tinyurl.com/n9slgc9" alt="">
+                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
     <!-- section b-->
     <div class="content-section-b">
 
@@ -141,6 +176,7 @@
     </div>
     <!-- /.content-section-b -->
 
+    <!-- content-section-a -->
     <div class="content-section-a">
 
         <div  id="projects" class="container">
