added link to main website

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h4 class="section-heading">E-commerce Web Design<br>Authorized Distributor Website</h4>
-                    <h2>DigixStream US</h2>
-                    <p class="lead">I was contracted by T.W.P. LLC to design competitive website for handling wholesale &amp; retail orders for it's east coast distribution. I decided to capture the audience with a vivid motion picture feature style website. The e-commerce design is simple and to the point, allowing for successful transcations among TWP's wholesale or retail transactions.</p>
+                    <a onClick="location.href='http://www.digixstream.us'"><h2>DigixStream US</h2></a>
+                    <p class="lead">I was contracted by T.W.P. LLC to design a competitive website for handling wholesale &amp; retail orders for it's east coast distribution. I decided to capture the audience with a vivid motion picture feature style website. The e-commerce design is simple and to the point, allowing for successful transactions among TWP's wholesale or retail transactions. <a onClick="location.href='http://www.digixstream.us'">see website</a></p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
@@ -131,8 +131,8 @@
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img style="position: relative; top: 45px;"class="img-responsive" src="http://tinyurl.com/n9slgc9" alt="">
-                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
+                   <a onClick="location.href='http://www.digixstream.us'"><img style="position: relative; top: 45px;"class="img-responsive" src="http://tinyurl.com/n9slgc9" alt="DigixStream Website"></a>
+                   
                 </div>
             </div>
         </div>
