--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+    <!-- section b-->
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Florida Hair Stlyist<br>eFashion Store.</h4>
+                    <h2>Jen Styles Hair</h2>
+                    <p class="lead">Jen Stylesm has been my client for almost 3 years now. Upon graduating from Full Sail University I reached out to Jennifer
+                    so that we could update and modify her brand image. Let me know what you think, she and her customers are very pleased.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="../jsw.jpg" alt="Jen Stlyes Hair">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
     <!-- content-section-a -->
     <div class="content-section-a">
 
@@ -340,13 +364,13 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/MeisterWebzrp" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://twitter.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
                             <a href="https://github.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="https://www.linkedin.com/in/oburroughs" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
