updated twp llc portfolio link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,41 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  id="projects" class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Urban Hair Products:<br>Manufacturer</h4>
+                    <h2>Tidalwaves Pomade LLC,(T.W.P. LLC)</h2>
+                    <p class="lead">This project was a very good example of having all the right things in the right places. Tidal Waves website was lacking several design concepts, visual flow and overall aesthetics that a reputabale web store should have. I met with the team, we decided to overhual the entire framework and switch up virtual environments based on my illustrations of what was needed to sale more online. Orders have ski rocketed up 350% in the last 2 months based on this re-design.</p>
+                </div>
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title"></h4>
+                  </div>
+                  <div class="modal-body">
+                    <p></p>
+                    <p></p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="..img/twp.png">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img style="position: relative; top: 45px;"class="img-responsive" src="" alt="">
+                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
     <!-- section b-->
     <div class="content-section-b">
 
@@ -111,9 +146,9 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h4 class="section-heading">Florida Hair Stlyist<br>eFashion Store.</h4>
+                    <h4 class="section-heading">Florida Hair Stylist<br>eFashion Store.</h4>
                     <h2>Jen Styles Hair</h2>
-                    <p class="lead">Jen Stylesm has been my client for almost 3 years now. Upon graduating from Full Sail University I reached out to Jennifer
+                    <p class="lead">Jen Styles has been my client for almost 3 years now. Upon graduating from Full Sail University I reached out to Jennifer
                     so that we could update and modify her brand image. Let me know what you think, she and her customers are very pleased.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
