--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img style="position: relative; top: 45px;"class="img-responsive" src="../img/twp.png" alt="Tidalwaves Website">
+                    <img style="position: relative; top: 45px;"class="img-responsive" src="../img/twp.jpg" alt="Tidalwaves Website">
                     <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
