--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Urban Hair Products:<br>Manufacturer</h4>
                     <h2>Tidalwaves Pomade LLC,(T.W.P. LLC)</h2>
-                    <p class="lead">This project was a very good example of having all the right things in the right places. Tidal Waves website was lacking several design concepts, visual flow and overall aesthetics that a reputabale web store should have. I met with the team, we decided to overhual the entire framework and switch up virtual environments based on my illustrations of what was needed to sale more online. Orders have ski rocketed up 350% in the last 2 months based on this re-design.</p>
+                    <p class="lead">I met with the team, we decided to overhual the entire framework and switch up virtual environments based on my illustrations of what was needed to sale more online. Orders have ski rocketed up 350% in the last 2 months based on this re-design.</p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
