jen stlyes links added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     so that we could update and modify her brand image. Let me know what you think, she and her customers are very pleased.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="../jsw.jpg" alt="Jen Stlyes Hair">
+                    <a href="http://www.iamjenstyles.com"><img class="img-responsive" src="../jsw.jpg" alt="Jen Stlyes Hair"></a>
                 </div>
             </div>
 
