updating portfolio with econtactz, and efashion template.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,66 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
+                    <h4 class="section-heading">Fashion<br>Distributors</h4>
+                    <h2>eFashion Template</h2>
+                    <p class="lead">My final project from Full Sail Univeristy. I designed and Developed and template for open-source software ecommerce platoform. This template can be used for many fashion related business.<a href="https://github.com/MeisterWebzr/eFashion"></a>Follow on github</a>. </p>
+                </div>
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title"></h4>
+                  </div>
+                  <div class="modal-body">
+                    <p></p>
+                    <p></p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="..img/eFashion.jpg">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../img/eFashion.jpg" alt="eFashion App"></a>
+                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
+                </div>
+            </div>
+        </div>
+        <!-- /.container a -->
+        
+    <!-- section b-->
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">PDO Database<br>Web App</h4>
+                    <h2>eContactz</h2>
+                    <p class="lead">Econtactz illustrates a snapshot of a fullstack web app built from the ground up. My first authored GNU GENERAL PUBLIC LICENSE project. <a href="https://github.com/MeisterWebzr/eContactz"></a>Follow on github</a>.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="..img/eContactz.jpg" alt="eContactz App"></a>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  id="projects" class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
                     <h4 class="section-heading">Urban Hair Products:<br>Manufacturer</h4>
                     <h2>Tidalwaves Pomade LLC,(T.W.P. LLC)</h2>
                     <p class="lead">I met with the team, we decided to overhual the entire framework and switch up virtual environments based on my illustrations of what was needed to sale more online. Orders have ski rocketed up 350% in the last 2 months based on this re-design.</p>
@@ -152,7 +212,7 @@
                     so that we could update and modify her brand image. Let me know what you think, she and her customers are very pleased.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://www.iamjenstyles.com"><img class="img-responsive" src="../jsw.jpg" alt="Jen Stlyes Hair"></a>
+                    <a href="http://www.iamjenstyles.com"><img class="img-responsive" src="..img/jsw.jpg" alt="Jen Stlyes Hair"></a>
                 </div>
             </div>
 
