updating image links

--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@
                     <p></p>
                     <p></p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
-                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="..img/eFashion.jpg">
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="../eFashion.jpg">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../img/eFashion.jpg" alt="eFashion App"></a>
+                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../eFashion.jpg" alt="eFashion App"></a>
                     <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
         </div>
         <!-- /.container a -->
-        
+
     <!-- section b-->
     <div class="content-section-b">
 
@@ -152,7 +152,7 @@
                     <p class="lead">Econtactz illustrates a snapshot of a fullstack web app built from the ground up. My first authored GNU GENERAL PUBLIC LICENSE project. <a href="https://github.com/MeisterWebzr/eContactz"></a>Follow on github</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="..img/eContactz.jpg" alt="eContactz App"></a>
+                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="../eContactz.jpg" alt="eContactz App"></a>
                 </div>
             </div>
 
@@ -184,7 +184,7 @@
                     <p></p>
                     <p></p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
-                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="..img/twp.png">
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="../twp.png">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
@@ -212,7 +212,7 @@
                     so that we could update and modify her brand image. Let me know what you think, she and her customers are very pleased.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://www.iamjenstyles.com"><img class="img-responsive" src="..img/jsw.jpg" alt="Jen Stlyes Hair"></a>
+                    <a href="http://www.iamjenstyles.com"><img class="img-responsive" src="../jsw.jpg" alt="Jen Stlyes Hair"></a>
                 </div>
             </div>
 
