--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p></p>
                     <p></p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
-                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="../eFashion.jpg">
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="eFashion.jpg">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
