--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../eFashion.jpg" alt="eFashion App"></a>
+                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../efashion.jpg" alt="eFashion App"></a>
                     <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <p class="lead">Econtactz illustrates a snapshot of a fullstack web app built from the ground up. My first authored GNU GENERAL PUBLIC LICENSE project. <a href="https://github.com/MeisterWebzr/eContactz"></a>Follow on github</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="../eContactz.jpg" alt="eContactz App"></a>
+                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="../econtact.jpg" alt="eContactz App"></a>
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://www.tidalwavespomade.com"><img style="position: relative; top: 45px;"class="img-responsive" src="../img/twp.jpg" alt="Tidalwaves Website"></a>
+                    <a href="http://www.tidalwavespomade.com"><img style="position: relative; top: 45px;"class="img-responsive" src="../twp.jpg" alt="Tidalwaves Website"></a>
                     <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
